release 1.1.5 (2010)
- Upgraded jersey-simple-server to version 4.1.15.
- If an exception is mapped to a Response then that exception is now available
  from the HttpResponseContext.getMappedThrowable() method.
- Fixed issue 379
  https://jersey.dev.java.net/issues/show_bug.cgi?id=379
  Jersey applications can now be deployed on Google App Engine.
- Added tracing feature.
  Tracing provides useful information that describes how a request
  is processed and dispatched to JAX-RS/Jersey components. This can aid
  debugging when the application is not behaving as expected either
  because of a bug in the application code or in the Jersey code.
  Trace messages will be output as response headers with a header name of the
  form "X-Jersey-Trace-XXX", where XXX is a decimal value corresponding to the
  trace message number, and a header value that is the trace message.
  See ResourceConfig.FEATURE_TRACE and ResourceConfig.FEATURE_TRACE_PER_REQUEST.
  Tracing can be abled for a web application by adding the following init-param:
    <init-param>
        <param-name>com.sun.jersey.config.feature.Trace</param-name>
        <param-value>true</param-value>
    </init-param>
- Added new feature - now its possible to set language mappings via
  ResourceConfig property (ResourceConfig.PROPERTY_LANGUAGE_MAPPINGS);
  this can be set as a parameter in web.xml file.
  Allowed types are String and String[], format: "segment:language-tag".
  Language tag is defined in RFC 2616 (http://www.ietf.org/rfc/rfc2616.txt).
    language-tag  = primary-tag *( "-" subtag )
    primary-tag   = 1*8ALPHA
    subtag        = 1*8ALPHA
- Added new feature - now its possible to set media type mappings via
  ResourceConfig property (ResourceConfig.PROPERTY_MEDIA_TYPE_MAPPINGS);
  this can be set as a parameter in web.xml file.
  Allowed types are String and String[], format: "segment:media/type".
  Multiple definitions are comma separated. This was implemented mainly
  to match similar RESTEasy feature.